# silero-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  rust_ci.yml
benches/: usage.rs
example/file_inference/: Cargo.toml
example/file_inference/src/: audio_reading.rs  main.rs
examples/: generate_json.rs
scripts/: plot_audio.py  requirements.txt
src/: audio_reading.rs  audio_resampler.rs  errors.rs  lib.rs  utils.rs
tests/: consistency.rs  snapshot.rs
tests/data/: chunk_20_16000Hz_default.json  chunk_20_8000Hz_default.json  chunk_30_16000Hz_default.json  chunk_30_8000Hz_default.json  chunk_30_default_params_16k.json  chunk_50_16000Hz_default.json  chunk_50_16000Hz_long_pre_speech.json  chunk_50_16000Hz_short_redemption.json  chunk_50_8000Hz_default.json
