[package]
name = "silero"
version = "0.1.0"
repository = "https://github.com/emotechlab/Silero"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ndarray = "0.16"
ort = "=2.0.0-rc.6"
serde = { version = "1.0.208", features = ["derive"], optional = true }

[features]
default = ["static-model"]
static-model = []
serde = ["dep:serde"]

[dev-dependencies]
approx = "0.5.1"
hound = "3.5.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
